SupportAssignments: Fixing header phrasing/alignment

--- a/app/supportAssignment/directives/supportAssignmentTable/supportStaffTab/supportStaffTab.css
+++ b/app/supportAssignment/directives/supportAssignmentTable/supportStaffTab/supportStaffTab.css
@@ -18,3 +18,8 @@
 .support-staff-tab__spacer {
 	padding-bottom: 10px;
 }
+
+
+.support-staff-tab__assigned-header {
+	padding-left: 80px;
+}
